bug fix: z-index on media bar & RWD % error causing horizontal scrollbar

--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -76,15 +76,18 @@ section i {
 #soundtrack-container {
   /* display of audio control */
   position: absolute;
-  padding-top: 86px;
-  width: 100%;
-  z-index: 1001;
+  //padding-top: 86px;
+  bottom: 30px;
+  width: 95%;
+  z-index: 999;
 }
 
 #soundtrack {
   /* display of audio control */
   margin: 0 auto;
   opacity: 0.5;
+  //margin-right: 30px;
+
 }
 
 #headline-text {
